# ottopia_tools

./: .gitignore  README.md  otter1.json  pyproject.toml  tox.ini
ottopia_tools/: some_executable.py
