[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ottopia_tools"
version = "0.0.1"
description = "Tools for Ottopia"
authors = ["James Lewellyn <lewellyn.james@gmail.com>"]
maintainers = ["James Lewellyn <lewellyn.james@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
some_executable = 'ottopia_tools.some_executable:main'

[tool.poetry.dependencies]
python = "^3.10"
web3 = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-2020 = "*"
flake8-alfred = "*"
flake8-annotations = "*"
flake8-annotations-complexity = "*"
flake8-annotations-coverage = "*"
flake8-black = "*"
flake8-blind-except = "*"
flake8-broken-line = "*"
flake8-builtins = "*"
flake8-bugbear = "*"
flake8-commas = "*"
flake8-docstrings = "*"
flake8-fixme = "*"
flake8-import-order = "*"
flake8-import-style = "*"
flake8-logging-format = "*" 
flake8-mutable = "*"
flake8-pylint = "*"
flake8-print = "*"
flake8-pytest = "*"
flake8-pytest-style = "*"
flake8-quotes = "*"
flake8-string-format = "*"
flake8-typing-imports = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
types-PyYAML = "*"

[tool.black]
line-length = 120
